...

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_reel"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/add"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/caption"
...
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/edT_password_login"
            app:layout_constraintStart_toStartOf="@+id/edT_password_login"
            app:layout_constraintTop_toBottomOf="@+id/edT_password_login" />

        <Button
            android:id="@+id/create_btn"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/green"
            android:text="Создать"
            android:layout_margin="10dp"
...
