...
        android:src="@drawable/nono"
        android:layout_gravity="top|left"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="20dp"/>

    <com.rey.material.widget.LinearLayout
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
...
